# neon_oubliette

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  makeit.txt  tmp_code_9eef957937f8909c371375e089f45bbd.bash
.adk/: session.db
architecture/: CORE_INTERFACES.md  configuration_management.md  macro_micro_design.md  notcurses_vertical_rendering.md  political_social_simulation.md  reactive_causal_engine.md  simulation_loop.md  verticality_and_player_view.md  verticality_population_scaling.md
architecture/rendering/: notcurses_renderer_interface.md  notcurses_vertical_rendering.md
assets/ascii/: DESIGN_LANGUAGE_SPEC.md
data/configs/: drone_archetypes.json  world_generator_params.json
data/schemas/: drone_archetypes_schema.json  world_generator_params_schema.json
data_schemas/: ENTITY_DATA_SCHEMA.md
design/: FACTIONS_AND_LEADERS.md  SIMULATION_LAYERS_ARCHITECTURE.md
docs/: coding_patterns.md
docs/ecs/: entt_event_types.md
ecs/: command_buffer.h  component_declarations.h  component_registration.cpp  component_registration.h  ecs_system_manager.md  entity_creation_functions.cpp  entity_creation_functions.h  entt_component_types.md  entt_event_types.md  event_bus.md  event_declarations.h  event_registration.cpp  event_registration.h  events.h  simulation_coordinator.cpp  simulation_coordinator.h  system_registration.cpp  system_registration.h  system_scheduler.cpp  system_scheduler.h  system_scheduler.md
ecs/components/: components.h  infrastructure_components.h  lod_components.h  physics_colors.h  simulation_layers.h  transit_components.h  zoning_components.h
ecs/systems/: activity_system.cpp  activity_system.h  agent_action_system.cpp  agent_action_system.h  agent_decision_system.cpp  agent_decision_system.h  agent_spawn_system.cpp  agent_spawn_system.h  ai_system.cpp  ai_system.h  barter_system.cpp  barter_system.h  biology_system.h  building_entrance_system.h  building_generation_system.h  chunk_streaming_system.cpp  chunk_streaming_system.h  city_generation_system.h  cognitive_system.h  consumption_system.cpp  consumption_system.h  container_system.cpp  container_system.h  crafting_system.cpp  crafting_system.h  economic_market_system.h  economic_system.cpp  economic_system.h  ecosystem_system.h  environmental_system.h  faction_system.cpp  faction_system.h  infrastructure_influence_system.h  infrastructure_network_system.cpp  infrastructure_network_system.h  infrastructure_system.h  input_system.cpp  input_system.h  inspection_system.cpp  inspection_system.h  (+40 more)
mechanics/: INSPECT_MECHANICS_SPEC.md
planning_files/: IMPLEMENTATION_ROADMAP.md
research/ascii_visualization/: visual_encoding_systems.md
research/color_systems/: neon_noir_palette.md
research/ecs_abm/: agent_based_modeling_review.md  cellular_automata_review.md
research/reference_games/: inspired_games_analysis.md
src/: main.cpp
src/config/: ConfigLoader.cpp  (+3 more)
systems/: SYSTEM_INTERACTION_MATRIX.md  verticality_systems.md
tests/: dirty_sample.cpp
visual_design/: ascii_language_spec.md  physics_visual_metaphor.md
(+11 files in other folders)
